Correct image overflow on mobile

--- a/_sass/jekyll-theme-tactile.scss
+++ b/_sass/jekyll-theme-tactile.scss
@@ -59,6 +59,15 @@ html {
   align-items: center;
 }
 
+.flex-column {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 ol, ul {
 	list-style: none;
 }
